fixed issues with css spacing on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ button {
     align-items: center;
     margin-top: 5rem;
     margin-left: 17em;
+    margin-right: 1em;
     background-color: #30302F;
     border-radius: 20px;
 }
@@ -126,6 +127,7 @@ button {
     align-items: center;
     margin-top: 5rem;
     margin-left: 17em;
+    margin-right: 1em;
     background-color: #30302F;
     border-radius: 20px;
     padding: 2rem;
